--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -8,6 +8,10 @@ agent:
 blocks:
   - name: "Validate"
     task:
+      prologue:
+        commands:
+          - alias terraform='docker run --rm -it -e AWS_ACCESS_KEY_ID -e AWS_SECRET_ACCESS_KEY -e AWS_SESSION_TOKEN -w /work -v $(pwd):/work hashicorp/terraform:0.11.10 '
+          - terraform -v
       jobs:
       - name: Terraform plan
         commands:
@@ -18,6 +22,10 @@ blocks:
 
   - name: "Apply"
     task:
+      prologue:
+        commands:
+          - alias terraform='docker run --rm -it -e AWS_ACCESS_KEY_ID -e AWS_SECRET_ACCESS_KEY -e AWS_SESSION_TOKEN -w /work -v $(pwd):/work hashicorp/terraform:0.11.10 '
+          - terraform -v
       jobs:
       - name: Terraform apply
         commands:
