--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -8,6 +8,8 @@ agent:
 blocks:
   - name: "Validate"
     task:
+      secrets:
+        - name: kickstart-infra-aws
       prologue:
         commands:
           - alias terraform='docker run --rm -it -e AWS_ACCESS_KEY_ID -e AWS_SECRET_ACCESS_KEY -e AWS_SESSION_TOKEN -w /work -v $(pwd):/work hashicorp/terraform:0.11.10 '
@@ -22,6 +24,8 @@ blocks:
 
   - name: "Apply"
     task:
+      secrets:
+        - name: kickstart-infra-aws
       prologue:
         commands:
           - alias terraform='docker run --rm -it -e AWS_ACCESS_KEY_ID -e AWS_SECRET_ACCESS_KEY -e AWS_SESSION_TOKEN -w /work -v $(pwd):/work hashicorp/terraform:0.11.10 '
