--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -12,7 +12,7 @@ blocks:
         - name: kickstart-infra-aws
       prologue:
         commands:
-          - alias terraform='docker run --rm -it -e AWS_ACCESS_KEY_ID -e AWS_SECRET_ACCESS_KEY -e AWS_SESSION_TOKEN -w /work -v $(pwd):/work hashicorp/terraform:0.11.10 '
+          - alias terraform='docker run --rm -it -e AWS_ACCESS_KEY_ID -e AWS_SECRET_ACCESS_KEY -e AWS_SESSION_TOKEN -w /work -v $(pwd):/work -v ~/.ssh:/root/.ssh hashicorp/terraform:0.11.10 '
           - terraform -v
       jobs:
       - name: Terraform plan
@@ -28,7 +28,7 @@ blocks:
         - name: kickstart-infra-aws
       prologue:
         commands:
-          - alias terraform='docker run --rm -it -e AWS_ACCESS_KEY_ID -e AWS_SECRET_ACCESS_KEY -e AWS_SESSION_TOKEN -w /work -v $(pwd):/work hashicorp/terraform:0.11.10 '
+          - alias terraform='docker run --rm -it -e AWS_ACCESS_KEY_ID -e AWS_SECRET_ACCESS_KEY -e AWS_SESSION_TOKEN -w /work -v $(pwd):/work -v ~/.ssh:/root/.ssh hashicorp/terraform:0.11.10 '
           - terraform -v
       jobs:
       - name: Terraform apply
