--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -9,7 +9,7 @@ blocks:
   - name: "Validate"
     task:
       secrets:
-        - name: kickstart-infra-aws
+        - name: kickstart-infra
       prologue:
         commands:
           - alias terraform='docker run --rm -it -e AWS_ACCESS_KEY_ID -e AWS_SECRET_ACCESS_KEY -e AWS_SESSION_TOKEN -w /work -v $(pwd):/work -v ~/.ssh:/root/.ssh hashicorp/terraform:0.11.10 '
@@ -25,7 +25,7 @@ blocks:
   - name: "Apply"
     task:
       secrets:
-        - name: kickstart-infra-aws
+        - name: kickstart-infra
       prologue:
         commands:
           - alias terraform='docker run --rm -it -e AWS_ACCESS_KEY_ID -e AWS_SECRET_ACCESS_KEY -e AWS_SESSION_TOKEN -w /work -v $(pwd):/work -v ~/.ssh:/root/.ssh hashicorp/terraform:0.11.10 '
